--- a/src/threedee-ui/package.json
+++ b/src/threedee-ui/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.5.0",
+    "@react-three/drei": "^9.121.5",
+    "@react-three/fiber": "^9.0.0-alpha.8",
+    "@types/three": "^0.173.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "three": "^0.173.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
