--- a/src/threedee-ui/package.json
+++ b/src/threedee-ui/package.json
@@ -13,7 +13,9 @@
     "@modelcontextprotocol/sdk": "^1.5.0",
     "@react-three/drei": "^9.121.5",
     "@react-three/fiber": "^9.0.0-alpha.8",
+    "@tailwindcss/vite": "^4.0.6",
     "@types/three": "^0.173.0",
+    "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "three": "^0.173.0"
@@ -23,10 +25,13 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
+    "postcss": "^8.5.2",
+    "tailwindcss": "^4.0.6",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0"
