--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,9 @@
   "name": "backend",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "dev": "bun --watch index.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "bun-types": "^1.2.2"
