--- a/ui/package.json
+++ b/ui/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.3",
     "three": "^0.173.0"
   },
   "devDependencies": {
