--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.36.3",
     "@modelcontextprotocol/sdk": "^1.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
