--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "@modelcontextprotocol/sdk": "^1.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "uv": "^1.4.0"
   }
 }
